test/fail/bad-heartbeat.mo
actor {
  system func heartbeat() : () { // reject, should be async ()
  };
};

